# spring-sqlx-migration-plugin

./: Cargo.toml  README.md
src/: lib.rs
